# mapmap

./: .gitignore  .travis.yml  AUTHORS  AboutDialog.cpp  AboutDialog.h  AsyncQueue.h  BUGS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Commands.cpp  Commands.h  Common.cpp  Common.h  ConcurrentQueue.h  ConsoleWindow.cpp  ConsoleWindow.h  Controller.cpp  Controller.h  Defs.h  DestinationGLCanvas.cpp  DestinationGLCanvas.cpp.orig  DestinationGLCanvas.h  Dockerfile  Doxyfile  Element.cpp  Element.h  Ellipse.cpp  Ellipse.h  Facade.cpp  Facade.h  GuiForward.h  HACKING  INSTALL  INSTALL.md  Layer.cpp  Layer.h  MM.cpp  MM.h  MainApplication.cpp  (+111 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: qt-linux.yml  qt-macos.yml  qt-windows.yml
contrib/qtpropertybrowser-extension/: fileedit.h  fileeditfactory.h  filepathmanager.h  variantmanager.h
data/: Makefile.am  mapmap.desktop.in.in  mapmap.pc.in
docs/: Doxyfile  LibremappingUML.dia  datasheet.rst  documentation.qrc
docs/informations/: CHANGELOG.html  CHANGELOG.md  CONTRIBUTORS.html  CONTRIBUTORS.md  keyboard-shortcuts.css  keyboard-shortcuts.html  mapmap-keyboard-shortcuts.md  osc.html  osc.md
manual/: manual_en.rst
mapmap/: Makefile.am  version.c  version.h
prototypes/: sh-osx-gst-test.sh
prototypes/blackmagic/: composite.sh  hdmi-v4l2.sh  hdmi.sh  launch.sh  s-video.sh
prototypes/cairo/: build.sh
prototypes/controller/: controller.h
prototypes/glfw/: Makefile  README  main.c
prototypes/gst/: color-balance.sh
prototypes/gtk/: Makefile  main.c
prototypes/properties/: README  build.sh  hello.pro  main.cpp
prototypes/sdl/: Makefile  README  main.c
prototypes/shm/: read.sh  write.sh
prototypes/ui/: index.html
prototypes/wx-01-simple/: build.sh  main.cpp
prototypes/wx-02-input-output/: Common.cpp  Common.h  DestinationGLCanvas.cpp  Mapper.h  MapperGLCanvas.cpp  MapperGLCanvas.h  Paint.h  Shape.h  SourceGLCanvas.cpp  main.cpp
prototypes/wx-polyline/: main.cpp
prototypes/wx/wx-01-simple/: build.sh
prototypes/wx/wx-02-input-output/: DestinationGLCanvas.h  Mapper.h  MapperGLCanvas.cpp  build.sh  main.cpp
prototypes/wx/wx-03-polyline/: build.sh  main.cpp
resources/: interface.qrc  interface.qrc-bak  windows_resource.rc
resources/app_icons/: mapmap.icns
resources/images/: mapmap.icns
resources/macOS/: Get GStreamer macOS.url  Info.plist
resources/qss/: mapmap.qss
resources/texts/: mapmap.desktop  mapmap_fr.qm
scripts/: build.sh  encode4mmp  replace-path-in-project.sh  run.sh  sh_build_doc.sh  update-changelog.sh  update-contributors.sh  update-osc.sh
src/: Makefile.am  MapMapProject.pro  main.c  src.pri
src/app/: MainApplication.cpp  MainApplication.h  app.pri  main.cpp
src/control/: ConcurrentQueue.h  OscInterface.cpp  OscInterface.h  control.pri
src/control/qosc/: oscreceiver.cpp  oscreceiver.h  oscsender.cpp  oscsender.h  qosc_global.h
src/control/qosc/contrib/oscpack/: OscOutboundPacketStream.cpp  OscReceivedElements.h
src/core/: CameraImpl.cpp  CameraImpl.h  CameraSurface.cpp  CameraSurface.h  Commands.cpp  Commands.h  Element.h  MM.cpp  MM.h  Mapping.cpp  Mapping.h  MappingManager.cpp  MappingManager.h  MetaObjectRegistry.cpp  Paint.cpp  Paint.h  ProjectReader.cpp  ProjectReader.h  ProjectWriter.h  Util.cpp  Util.h  VideoImpl.cpp  VideoImpl.h  VideoImplQtMultiMedia.cpp  VideoImplQtMultiMedia.h  VideoSurface.cpp  VideoSurface.h  VideoV4l2SrcImpl.h  core.pri
src/gui/: AboutDialog.cpp  AboutDialog.h  ConsoleWindow.cpp  ConsoleWindow.h  MainWindow.cpp  MainWindow.h  MapperGLCanvas.cpp  MapperGLCanvas.h  MapperGLCanvasToolbar.cpp  MapperGLCanvasToolbar.h  MappingGui.cpp  MappingGui.h  MappingItemDelegate.cpp  MappingItemDelegate.h  MappingListModel.cpp  MappingListModel.h  OutputGLCanvas.cpp  OutputGLCanvas.h  OutputGLWindow.cpp  OutputGLWindow.h  PaintGui.cpp  PaintGui.h  PreferenceDialog.cpp  PreferenceDialog.h  ShapeControlPainter.cpp  ShapeControlPainter.h  ShapeGraphicsItem.cpp  ShapeGraphicsItem.h  ShortcutWindow.cpp  ShortcutWindow.h  gui.pri
src/gui/contrib/qtpropertybrowser/: config.pri
src/gui/contrib/qtpropertybrowser-extension/: fileedit.cpp  filepathmanager.cpp  qtpropertybrowser-extension.pri  variantfactory.cpp  variantfactory.h
src/mapmap/: Commands.cpp  ConcurrentQueue.h  Ellipse.cpp  Ellipse.h  MM.cpp  MapperGLCanvasToolbar.h  Mapping.cpp  Mapping.h  MappingItemDelegate.h  MappingListModel.h  MappingManager.h  Mesh.cpp  OscInterface.cpp  OutputGLWindow.cpp  Serializable.cpp  Util.h  VideoShmSrcImpl.h  VideoUriDecodeBinImpl.h  VideoV4l2SrcImpl.cpp  main.cpp  mapmap_resource.rc
src/mapmap/contrib/qtpropertybrowser-extension/: fileeditfactory.cpp  variantmanager.cpp
src/mapmap/docs/: datasheet.rst
src/mapmap/docs/informations/: CONTRIBUTORS.html  MAPPING
src/mapmap/resources/texts/: mapmap.xml
src/mapmap/translations/: translation.qrc
src/shape/: Ellipse.cpp  Ellipse.h  Mesh.cpp  Mesh.h  Polygon.cpp  Polygon.h  Quad.h  Shape.cpp  Shape.h  Shapes.h  Triangle.h  shape.pri
src/tests/: TestMaths.cpp  tests.pro
tests/: TestMaths.h  tests.pro
translations/: mapmap_en.ts  mapmap_es.ts  mapmap_fr.ts  mapmap_zh_CN.ts  mapmap_zh_TW.ts  translation.qrc
